[tool.poetry]
name = "vacation-planner"
version = "0.1.0"
description = ""
authors = ["Sean Sullivan <seantsullivan04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
flask = {extras = ["async"], version = "^2.2.3"}
googlemaps = "^4.10.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"